--- a/src/e_cidadania/templates/userprofile/profile/delete_done.html
+++ b/src/e_cidadania/templates/userprofile/profile/delete_done.html
@@ -9,7 +9,7 @@
     <div id="contentinside">{% trans "Your profile information has been removed successfully." %}
         <div></br></br>
             <a href="/">&laquo; {% trans "Back to home page" %}</a></br>
-            <a href="/accounts/profile">&laquo; {% trans "Back to your profile" %}</a>
+            <a href="/accounts/">&laquo; {% trans "Back to your profile" %}</a>
         </div>
     </div>
 {% endblock %}
