--- a/src/e_cidadania/templates/userprofile/profile/location_done.html
+++ b/src/e_cidadania/templates/userprofile/profile/location_done.html
@@ -7,5 +7,5 @@
 
 {% block content %}
 	<h3>{% trans "Your profile information has been updated successfully" %}.</h3>
-	<p><a href="/accounts/profile">Go back to your profile</p>
+	<p><a href="/accounts/">{% trans "Go back to your profile" %}</p>
 {% endblock %}
