--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -63,7 +63,7 @@
            <a href="http://www.w3.org">xml</a>
         </p>
 	    {% endblock %}
-        <p>(c) 2010 <a href="http://trac.cidadania.coop">e-cidadania</a> creado por <a href="http://www.cidadania.coop">Cidadania Rede de Aplicacións Sociais</a></p>
+        <p>(c) 2010-{% now "Y" %} <a href="http://trac.cidadania.coop">e-cidadania</a> creado por <a href="http://www.cidadania.coop">Cidadania Sociedade Cooperativa</a></p>
         <p>100% organic hand-coded software</p>
     </div>
 	</body>
