--- a/src/e_cidadania/templates/menu.html
+++ b/src/e_cidadania/templates/menu.html
@@ -1,7 +1,7 @@
 {% load i18n %}
   {% if user.is_authenticated %}
     <ul class="topnav">
-	  <li><a href="/accounts/messages">{% trans "Messages" %}</a> | </li>
+      <li><a href="/">{% trans "Home" %}</a> | </li>
       <li><a href="/none">{% trans "Language" %}</a>| </li>
       <li>
         <a href="/accounts/">
@@ -15,6 +15,7 @@
           {% if user.is_staff %}
 	          <li><a href="/admin">{% trans "Administration" %}</a></li>
 	        {% endif %}
+	          <li><a href="/accounts/messages">{% trans "Messages" %}</a></li>
 	          <li><a href="/accounts/edit/personal">{% trans "Edit profile" %}</li>
 	          <li><a href="/accounts/logout">{% trans "Logout" %}</a></li>
 	      </ul>
