--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -22,6 +22,7 @@
          documentos, creación de espacios específicos para cada cliente,
          así como otras muchas funciones pero mejor pruébalo tú mismo.
       </p>
+      </br><span style="margin-left: 35%;"><img src="/{{ MEDIA_URL }}assets/sep.png"/></span></br>
     </div>
     
     
