--- a/src/e_cidadania/templates/userprofile/account/login.html
+++ b/src/e_cidadania/templates/userprofile/account/login.html
@@ -4,26 +4,19 @@
 {% block title %}{% trans "User login" %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-{% block extrajs %}
-<script type="text/javascript">
-	$(function() {
-		$("input[type='text'], input[type='password']").addClass("text");
-		$("#id_username").focus();
-	});
-</script>
-{% endblock %}
-
 {% block content %}
 <div id="loginblock">
 	<form action="{% if next %}?next={{ next }}{% endif %}" method="post" accept-charset="utf-8">{% csrf_token %}
 	<fieldset>
-		<legend>{% trans "User login" %}</legend>
+		<legend>{% trans "User login" %}</legend></br></br>
+		
 		<label for="id_username">{% trans "Username" %}</label>
 		<p>{{ form.username }}
 			{% if form.username.errors %}
 				<span class="quiet red">{{ form.username.html_error_list }}</span>
 			{% endif %}
-		</p>
+		</p></br>
+		
 		<label for="id_password">{% trans "Password" %}</label>
 		<p>{{ form.password }}
 			{% if form.password.errors %}
@@ -33,19 +26,11 @@
 		{% if form.non_field_errors %}
 			<ul class="quiet red">{{ form.non_field_errors.as_ul }}</ul>
 		{% endif %}
-	</fieldset>
-	<p><input type="submit" value="{% trans 'Login' %}" /></p>
+	</fieldset></br>
+	<p><input type="submit" value="{% trans 'Login' %}" />
+	   <a href="{% url password_reset %}">{% trans "Lost your password?" %}</a> /
+	   <a href="{% url signup %}">{% trans "Sign up!" %}</a>
+	</p>
 	</form>
 </div>
-{% endblock %}
-
-{% block content-related %}
-	<div class="box">
-		<h3>{% trans "Utilities" %}:</h3>
-    {# http://code.djangoproject.com/ticket/7239 #}
-		<a href="{% url password_reset %}">{% trans "Lost your password?" %}</a>
-		<br />
-		<a href="{% url signup %}">{% trans "Sign up!" %}</a>
-		<br />
-	</div>
 {% endblock %}
