Removed global translations and created per app translation files. Also fixed a problem with the br tag in templates

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -55,11 +55,11 @@
       
       <div id="footerimg">
         {% block footerimg %}
-          <img src="/{{ MEDIA_URL }}assets/logocidadania.jpg" /></br>
-          Corredoira das Fraguas, 5, 1 izq.</br>
-          15703 Santiago de Compostela</br>
-          A Coruña</br>
-          Tlf: 999 999 999</br>
+          <img src="/{{ MEDIA_URL }}assets/logocidadania.jpg" /><br />
+          Corredoira das Fraguas, 5, 1 izq.<br />
+          15703 Santiago de Compostela<br />
+          A Coruña<br />
+          Tlf: 999 999 999<br />
         {% endblock %}
       </div>
 	    {% block footer %}
