Completely modified the tempaltes structure and minor fixes
Now templates are application dependant instead of project dependand. Also modified spaces views and decided
to use has_perm() instead of the decorator permission_required, for the sake of
templating.

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
@@ -4,6 +4,12 @@
 {% block title %}{% trans "User login" %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+
 {% block content %}
 <div id="loginblock">
 	<form action="{% if next %}?next={{ next }}{% endif %}" method="post" accept-charset="utf-8">{% csrf_token %}
