--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -14,6 +14,9 @@
 	</head>
 	<body>
 	  <div id="topbar">
+	    <div id="version">
+	      version 0.1 ALPHA (Washington)
+	    </div>
 	    <div id="userbar">
 	      {% include "menu.html" %}
 	    </div>
@@ -31,11 +34,7 @@
 	        {% block banner %}
 	        {% endblock %}
 	      </div>
-	      
-	      <div id="menubar">
-	        {% block menubar %}
-	        {% endblock %}
-	      </div>
+
 	    {% endblock %}
 	  </div>
 
