--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -47,11 +47,11 @@
   <div id="rightcol">
 
     <div id="widget">
-      <p style="font-size: 16px;"><strong><span style="font-size: 23px;"><a href="/spaces/add">Crea tu propio espacio</a></span></strong> dentro de e-cidadania</p>
+      <p><span style="font-size: 23px;">¿Qué puedes hacer con e-cidadania?</span> <strong>Descúbrelo</strong></p>
     </div>
-
+    
     <div id="widget">
-      <p>¿Qué puedes hacer con e-cidadania? <strong>Descúbrelo</strong></p>
+      <p><a href="/spaces/add">Crea tu propio espacio</a> dentro de e-cidadania</p>
     </div>
     
     <div id="widget">
