--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -122,10 +122,18 @@ input[type="text"], input[type="password"] {
     background: url(../assets/userbar.png) #000 repeat;
 }
 
+#version {
+    float: left;
+    line-height: 35px;
+    font-weight: bold;
+    color: #FFF;
+    margin-left: 20px;
+}
+
 #userbar {
     float: right;
     margin-right: 20px;
-    margin-bottom: 10px;
+
     padding: 0 10px 2px 10px;
     height: 32px;
     line-height: 32px;
@@ -160,18 +168,6 @@ input[type="text"], input[type="password"] {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-}
-
-#menubar {
-    margin: 5px;
-    height: 20px;
-}
-
-#menubar li {
-    border: 1px solid #000;
-    padding: 5px;
-    font-size: 1em;
-    float: right;
 }
 
 #centercol {
@@ -310,20 +306,20 @@ html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
     margin: 0px auto;
     width: 100%;
     height: 130px;
-
+    background: #dfdfdf;
 }
 
 #logo {
     float: left;
     /* The logo image must be 75px height */
     width: 150px;
-    height: 130px;
+    height: 105px;
     padding: 25px 37px 0px 37px; 
 }
 
 #banner {
     float: left;
-    height: 130px;
+    height: 105px;
     padding-top: 25px;
 }
 
