--- a/src/e_cidadania/apps/spaces/templates/spaces/index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/index.html
@@ -13,6 +13,21 @@
   {% block centercol %}
     <div id="centercol">
       
+      {% for news in publication %}
+      {% if news.post_pub_index %}
+        <div class="post">
+          <h1>{{ news.post_title }}</h1>
+          <p>{{ news.post_message }}</p>
+          <p>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }}</p>
+        </div>
+      {% endif %}
+      {% empty %}
+      <div class="post">
+        <p>{% trans "Nothing published yet." %}</p>
+      </div>
+      {% endfor%}
+    
+    
       <h1>Datos de prueba</h1>
       Nombre: {{ get_place.name }}<br/>
       Descripcion: {{ get_place.description }}<br/>
@@ -23,6 +38,7 @@
       Propuestas activado: {{ get_place.mod_proposals }}<br/>
       Este espacio fue creado el: {{ get_place.date }}<br/>
       Este espacio fue creado por: {{ get_place.author }}<br/>
+      
     </div>
   {% endblock %}
 
