--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -70,7 +70,7 @@
         </p>
 	    {% endblock %}
         <p>(c) 2010-{% now "Y" %} <a href="http://trac.cidadania.coop">e-cidadania</a> creado por <a href="http://www.cidadania.coop">Cidadania Sociedade Cooperativa</a></p>
-        <p>100% organic hand-coded software</p>
+        <p>Garantimos que este programa non tomará conciencia e se apoderará do mundo.</p>
     </div>
 	</body>
 </html>
