--- a/src/e_cidadania/apps/spaces/templates/spaces/add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/add.html
@@ -9,7 +9,7 @@
 
   {% block centercol %}
     <div id="centercol">
-      <form action="" method="post">{% csrf_token %}
+      <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
         {{ form.non_field_errors }}
         <div class="fieldWrapper">
           {{ form.name.errors }}
